updated Polish translation

--- a/po/wesnoth-dm/pl.po
+++ b/po/wesnoth-dm/pl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-05 16:25+0100\n"
-"PO-Revision-Date: 2011-11-16 14:05+0100\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 10:38+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
 "Language: \n"
@@ -434,25 +434,15 @@ msgstr "Nie! Methorze... Nie umieraj!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Zapamiętaj me ostatnie słowa, Delfadorze! Udaj się na północny wschód do "
+"Zapamiętaj me ostatnie słowa, Delfadorze! Udaj się na północny zachód do "
 "Weldyn i odszukaj mojego przyjaciela Leollyna. On ci pomoże."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
@@ -461,7 +451,7 @@ msgid ""
 msgstr ""
 "Świetnie, Delfadorze! Widzę, że dobrze cię wyszkoliłem i zaprawdę jesteś już "
 "gotów odszukać swoje miejsce na świecie. Dni mych wędrówek dobiegły końca, "
-"ale ty powinieneś się udać na północny wschód do Weldyn i odszukać mojego "
+"ale ty powinieneś się udać na północny zachód do Weldyn i odszukać mojego "
 "przyjaciela Leollyna. On ci pomoże."
 
 #. [message]: id=Delfador
@@ -1510,7 +1500,7 @@ msgstr "Kostek"
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:331
 msgid "Penella"
-msgstr ""
+msgstr "Penella"
 
 #. [message]: speaker=Penella
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:335
@@ -1528,7 +1518,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:342
 msgid "Roddry"
-msgstr ""
+msgstr "Roddry"
 
 #. [message]: speaker=Roddry
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:346
@@ -1554,10 +1544,8 @@ msgstr "Zmarłem dawno temu. Nie pamiętam swojego imienia."
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:356
-#, fuzzy
-#| msgid "Melina"
 msgid "Melinna"
-msgstr "Melina"
+msgstr "Melinna"
 
 #. [message]: speaker=Melinna
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:360
@@ -1589,7 +1577,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:371
 msgid "Sythan"
-msgstr ""
+msgstr "Sythan"
 
 #. [message]: speaker=Sythan
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:375
@@ -1603,7 +1591,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:378
 msgid "Hereld"
-msgstr ""
+msgstr "Hereld"
 
 #. [message]: speaker=Hereld
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:382
@@ -3232,10 +3220,8 @@ msgstr "Trgrau"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
-msgstr "Śmierć Gararda"
+msgstr "Śmierć Gararda II"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
@@ -3274,7 +3260,7 @@ msgstr ""
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:259
 msgid "Agreed, but we must make haste, for the King is hard pressed."
-msgstr ""
+msgstr "Zgoda, ale musimy się spieszyć — król jest w niemałych opałach."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:267
