--- a/po/wesnoth-l/pl.po
+++ b/po/wesnoth-l/pl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2011-12-11 11:46+0100\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 10:39+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2788,19 +2788,14 @@ msgstr "Chłop myśliwy"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
 "Myśliwi całe swoje życie spędzili w ostępach puszczy i bagnach pokrywających "
-"ich dziką ojczyznę. Potrafią trafić w locie nietoperza i wyśledzić wszystko, "
-"co się porusza na ich terenie."
+"ich dziką ojczyznę. Potrafią trafić groźnego szczura bagiennego między oczy "
+"i wyśledzić wszystko, co się porusza na ich terenie."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
