--- a/po/wesnoth-nr/pl.po
+++ b/po/wesnoth-nr/pl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2010-04-11 12:52+0100\n"
+"POT-Creation-Date: 2012-01-21 01:45+0100\n"
+"PO-Revision-Date: 2012-01-21 19:47+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: polski <pl@li.org>\n"
 "Language: \n"
@@ -67,9 +67,8 @@ msgstr "Królewski gwardzista"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
-#, fuzzy
 msgid "(Expert level, 13 scenarios.)"
-msgstr "(Poziom: zaawansowany, 14 scenariuszy)"
+msgstr "(Poziom zaawansowany, 13 scenariuszy)"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:22
@@ -2106,7 +2105,7 @@ msgstr "Hettel"
 #. [side]: type=Death Knight, id=Tervor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:103
 msgid "Tervor"
-msgstr ""
+msgstr "Tervor"
 
 #. [side]: type=Death Knight, id=Author
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:127
@@ -2126,7 +2125,7 @@ msgstr "Boblin"
 #. [side]: type=Death Knight, id=Antrasis
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:199
 msgid "Antrasis"
-msgstr ""
+msgstr "Antrasis"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:301
@@ -3255,7 +3254,7 @@ msgstr "Abhai"
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2118
 msgid "EEEEEE!"
-msgstr ""
+msgstr "EEEEEE!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2122
@@ -3352,7 +3351,7 @@ msgstr "Jakże to? Niemożliwe - ostatni rok, który pamiętam, to 14318 n.e.!"
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2183
 msgid "?"
-msgstr ""
+msgstr "?"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2187
