--- a/po/wesnoth-thot/pl.po
+++ b/po/wesnoth-thot/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.12+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2009-11-10 14:04+0100\n"
+"PO-Revision-Date: 2012-01-21 18:40+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -57,9 +57,8 @@ msgstr "Władca"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
-#, fuzzy
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Poziom średni, 13 scenariuszy)"
+msgstr "(Poziom średni, 11 scenariuszy)"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
@@ -249,7 +248,6 @@ msgstr ""
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:153
-#, fuzzy
 msgid ""
 "What is this? Their vanquished leader wears a cloak-pin of dwarvish make. "
 "And it bears a loremaster’s emblem."
@@ -342,17 +340,16 @@ msgstr "Młot Thursagana?"
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:128
-#, fuzzy
 msgid ""
 "Aye. The very tool with which our greatest runesmith made the Sceptre of "
 "Fire. But it is ancient, far older than Thursagan; he was but the last to "
 "wield it, and our oldest histories hint that this very hammer was used to "
 "forge the dwarves themselves in the heart of the earth."
 msgstr ""
-"Ano. Nim to właśnie nasz najsławniejszy kowal run wykuł Berło Ognia. Sam "
-"młot jest jednak pradawny, dużo starszy niż Thursagan - on jeno władał nim "
-"jako ostatni. Nasze najstarsze przekazy wspominają, że być może jest to ten "
-"sam młot, którym w sercu ziemi stworzono pierwsze krasnoludy."
+"Ano. Nim to właśnie nasz najsławniejszy runarz wykuł Berło Ognia. Sam młot "
+"jest jednak pradawny, dużo starszy niż Thursagan — on jeno władał nim jako "
+"ostatni. Nasze najstarsze przekazy wspominają, że być może jest to ten sam "
+"młot, którym w sercu ziemi stworzono pierwsze krasnoludy."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:132
@@ -365,7 +362,6 @@ msgstr ""
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:136
-#, fuzzy
 msgid ""
 "Because when Thursagan burned to death with his hand on the Hammer, all the "
 "runemasters and arcanisters then living — all those who had sworn to the "
@@ -375,11 +371,10 @@ msgid ""
 "sorely we miss them."
 msgstr ""
 "Ponieważ gdy Thursagan zginął w ogniu, trzymając w ręce Młot, wszyscy żyjący "
-"wtedy mistrzowie run i tajemnic - wszyscy, którzy przysięgali na potęgę "
-"Młota i związali się z jego mocą - padli martwi bez żadnego śladu, wszyscy "
+"wtedy mistrzowie run i tajemnic — wszyscy, którzy przysięgali na potęgę "
+"Młota i związali się z jego mocą — padli martwi bez żadnego śladu, wszyscy "
 "porażeni w tym samym momencie. Tajniki ich rzemiosła zginęły razem z nimi. "
-"Dlatego to nie ma teraz kowali run wśród krasnoludów i bardzo nam ich "
-"brakuje."
+"Dlatego to nie ma teraz runarzy wśród krasnoludów i bardzo nam ich brakuje."
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:140
@@ -425,7 +420,7 @@ msgstr ""
 "Księgę. Księgę Thursagana, w ukrytej, zamkniętej skrytce, którą musiał wykuć "
 "w litej skale sam, jeno z pomocą run. Zawał otworzył nam do niej dostęp. "
 "Wiele wysiłku kosztowało nas zrozumienie jego szyfru. Możliwe jednak, że "
-"mając tę księgę i Młot moglibyśmy ponownie zacząć szkolenie kowali run."
+"mając tę księgę i Młot moglibyśmy ponownie zacząć szkolenie runarzy."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:160
@@ -434,7 +429,6 @@ msgstr "Cóż więc sprawiło, że pierwsze o tym słyszę?"
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:164
-#, fuzzy
 msgid ""
 "My lord, the find was very recent. We are still deciphering the book. And "
 "there is this: with the Hammer at Kal Kartha and the book here, the question "
@@ -442,8 +436,8 @@ msgid ""
 "would be... delicate."
 msgstr ""
 "Mój panie, to stało się bardzo niedawno. Wciąż odszyfrowujemy księgę. I jest "
-"jeszcze inna kwestia: póki młot znajduje się w Kal Kartha, a księga tutaj, "
-"podjęcie decyzji, który klan będzie szkolił nowych kowali run byłoby sprawą "
+"jeszcze inna kwestia: póki Młot znajduje się w Kal Kartha, a księga tutaj, "
+"podjęcie decyzji, który klan będzie szkolił nowych runarzy byłoby sprawą "
 "bardzo... delikatną."
 
 #. [message]: speaker=Angarthing_dummy
@@ -490,7 +484,6 @@ msgstr "Jestem synem twojego bratanka, panie."
 
 #. [message]: speaker=Hamel
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:192
-#, fuzzy
 msgid ""
 "Ye’re young and not tested... but ye have the rank, and ye’ve shown the wits "
 "to use it well. I have decided. You and Angarthing will fare to Kal Kartha "
@@ -597,12 +590,11 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg:200
-#, fuzzy
 msgid ""
 "Now that is a sight still strange to my eyes — an orc fighting for the "
 "Northern Alliance."
 msgstr ""
-"Chyba pierwszy raz widzę coś takiego - orki walczą po stronie Sojuszu "
+"Chyba pierwszy raz widzę coś takiego — orki walczą po stronie Sojuszu "
 "Północy."
 
 #. [message]: speaker=Aiglondur
@@ -797,23 +789,21 @@ msgstr "Pokonaj wszystkich wrogów"
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:376
-#, fuzzy
 msgid ""
 "Stay alert, everyone, and keep together. This is bandit country — more than "
 "likely where Gothras and his gang came from."
 msgstr ""
-"Bądźcie czujni i trzymajcie się blisko siebie. To ziemie bandytów... "
+"Bądźcie czujni i trzymajcie się blisko siebie. To ziemie bandytów — "
 "najpewniej stąd przyleźli Gothras i jego gang."
 
 #. [message]: role=Scout
 #. "muckle" = Scottish/archaic English meaning "great" or "large"
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:381
-#, fuzzy
 msgid ""
 "Nae sign o’ bandits I can see, captain — but there are three muckle hosts of "
 "orcs off to our east."
 msgstr ""
-"Ani widu bandytów, dowódco... Ale na wschód od nas są trzy duże bandy orków."
+"Ani widu bandytów, kapitanie... Ale na wschód od nas są trzy zastępy orków."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:385
@@ -826,12 +816,11 @@ msgstr ""
 
 #. [message]: speaker=Tan-Malgar
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:389
-#, fuzzy
 msgid ""
 "Well, boys, we were planning to invade the Northern Alliance anyway... These "
 "dwarves should make a tasty appetizer."
 msgstr ""
-"No chłopcy, i tak planowaliśmy najazd ma ziemie Sojuszu Północy... a te "
+"No, chłopcy, i tak planowaliśmy najazd ma ziemie Sojuszu Północy... a te "
 "krasnoludy będą pyszną przystawką."
 
 #. [message]: speaker=Tan-Grolak
@@ -890,12 +879,12 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/06_High_Pass.cfg:215
-#, fuzzy
 msgid ""
 "That hut near the top of the pass... Something is glowing inside it. We "
 "should investigate."
 msgstr ""
-"Widzę światło w tamtej chacie, na szczycie przełęczy. Musimy to zbadać."
+"Widzę jakieś światło w tamtej chacie, na szczycie przełęczy. Musimy to "
+"zbadać."
 
 #. [unit]: type=Arch Mage, id=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/06_High_Pass.cfg:243
@@ -1104,7 +1093,6 @@ msgstr "Ci topornicy nie mogą się zbliżyć do naszych młodych! Do ataku!"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:181
-#, fuzzy
 msgid ""
 "We’re grateful for your assistance. And I’d like to send at least one of our "
 "senior apprentices with you to the east. It has come time for them to be "
@@ -1113,8 +1101,8 @@ msgid ""
 msgstr ""
 "Jesteśmy wam wdzięczni za pomoc. Chciałbym, by przynajmniej jeden z naszych "
 "starszych uczniów udał się z wami na wschód. Przyszedł czas, by zostali "
-"wędrownymi magami... Ja zaś czuję, że coś rośnie w siłę na wschodzie - coś, "
-"co budzi we mnie najgorsze przeczucia."
+"wędrownymi magami... Ja zaś czuję, że coś rośnie w siłę na wschodzie — coś, "
+"co budzi we mnie jak najgorsze przeczucia."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:186
@@ -1123,7 +1111,6 @@ msgstr "O czym mówisz?"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:191
-#, fuzzy
 msgid ""
 "There is some great magic brewing. Something... evil. I feel its traces in "
 "the currents of the earth and air."
@@ -1268,9 +1255,8 @@ msgstr ""
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:175
-#, fuzzy
 msgid "It’s too quiet... and I think I smell traces of smoke on the wind."
-msgstr "Jest za cicho... I chyba czuję zapach dymu niesionego przez wiatr."
+msgstr "Jest za cicho... i chyba czuję zapach dymu niesionego przez wiatr."
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:179
@@ -1294,7 +1280,6 @@ msgstr "Ollin"
 
 #. [message]: speaker=Ollin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:216
-#, fuzzy
 msgid "Don’t kill me, masters! Please don’t kill me!"
 msgstr "Nie zabijajcie mnie, panowie! Proszę, nie zabijajcie!"
 
@@ -1305,9 +1290,8 @@ msgstr "Nic ci z naszej strony nie grozi. Co znajduje się na wschód stąd?"
 
 #. [message]: speaker=Ollin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:224
-#, fuzzy
 msgid "You wear no mask. You... you’re not with them?"
-msgstr "Nie nosisz maski.... Nie... nie jesteś z nimi?"
+msgstr "Nie nosisz maski. Nie... nie jesteś z nimi?"
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:228
@@ -1354,7 +1338,6 @@ msgstr ""
 
 #. [message]: speaker=Masked Dwarf Leader
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:269
-#, fuzzy
 msgid ""
 "A witness? My name is... my name is not important. My deed will speak its "
 "own truth."
@@ -1415,7 +1398,6 @@ msgstr "Postąpiłeś honorowo. Jestem świadkiem."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:338
-#, fuzzy
 msgid ""
 "I have never seen the formal banishment before. One reads of it in the old "
 "tales, of course, but to hear it with one’s own ears? It was... unsettling."
@@ -1552,7 +1534,6 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/09_Forbidden_Forest.cfg:356
-#, fuzzy
 msgid "Kal Kartha should be only another day’s march east of here."
 msgstr "Od Kal Kartha powinien nas już dzielić tylko dzień marszu na wschód."
 
@@ -1604,7 +1585,6 @@ msgstr ""
 
 #. [message]: speaker=Tan-Morgh
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:254
-#, fuzzy
 msgid ""
 "Ahhh... more stinky-midgets, come to get killed just like these cowards in "
 "their den."
@@ -1690,7 +1670,6 @@ msgstr ""
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:328
-#, fuzzy
 msgid ""
 "That’s for lords and loremasters to worry about, not the likes of me. I must "
 "see to my troop’s care. Food will be brought to you; rest well, we will "
@@ -1729,13 +1708,12 @@ msgstr "Pokonaj Karraga"
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:184
-#, fuzzy
 msgid ""
 "Psst, Angarthing... Karrag and those dwarves on the dais, they’re all "
 "<i>masked</i>."
 msgstr ""
-"Psst, Angarthingu... Karrag i te krasnoludy wokół tronu - wszyscy są "
-"<i>zamaskowani</i>."
+"Psst, Angarthing... Karrag i te krasnoludy wokół tronu — wszyscy mają "
+"<i>maski</i>."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:189
@@ -1776,14 +1754,13 @@ msgstr ""
 
 #. [message]: speaker=Karrag
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:214
-#, fuzzy
 msgid ""
 "Trade? Your destruction of the besieging orcs was a far nobler act than "
 "trade. There can be more such victories. And there will be by the power of "
 "our ancient heirloom, the Hammer of Thursagan."
 msgstr ""
 "Handel? Pokonanie oblegających nas orków było czynem daleko bardziej "
-"szlachetnym niż jakiś tam handel. Takich zwycięstw może być więcej - i "
+"szlachetnym niż jakiś tam handel. Takich zwycięstw może być więcej — i "
 "będziemy je odnosić dzięki mocy naszego pradawnego dziedzictwa, Młota "
 "Thursagana."
 
@@ -1813,7 +1790,6 @@ msgstr ""
 
 #. [message]: speaker=Karrag
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:234
-#, fuzzy
 msgid ""
 "You... do not wish to see what is beneath this mask. I was terribly wounded "
 "in an orcish attack. Disfigured."
@@ -1850,7 +1826,6 @@ msgstr ""
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:282
-#, fuzzy
 msgid "No... no... it is horrible! My lord, how did you come to this?"
 msgstr "Nie... nie... to potworne! Mój panie, co się z tobą stało?"
 
@@ -1889,7 +1864,6 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:316
-#, fuzzy
 msgid ""
 "Wait... the lich’s apparent death was another illusion. In truth he ran "
 "through that doorway behind the throne."
@@ -1962,7 +1936,6 @@ msgstr ""
 
 #. [message]: speaker={ID_STRING}
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:246
-#, fuzzy
 msgid ""
 "I guess Karrag thought I knew too much. When his masked henchmen started "
 "raiding, plundering and taking all sorts of prisoners — which were sent to "
@@ -2144,13 +2117,11 @@ msgstr "To zapewne klucz otwierający te zamknięte drzwi."
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:708
-#, fuzzy
 msgid "(<i>Reads</i>) <i>Kannin a’kana du’masi a’forigln de’amp.</i>"
-msgstr "[czyta] Kannin a'kana du'masi a'forigln de'amp."
+msgstr "(<i>Czyta</i>) <i>Kannin a’kana du’masi a’forigln de’amp.</i>"
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:713
-#, fuzzy
 msgid "Now try the door again. It should open."
 msgstr "Spróbuj jeszcze raz otworzyć drzwi, powinno się udać."
 
@@ -2232,13 +2203,11 @@ msgstr ""
 
 #. [message]: speaker=Aragoth
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:1168
-#, fuzzy
 msgid "Our master’s ritual must not be interrupted. Stop them!"
 msgstr "Rytuał naszego mistrza nie może zostać przerwany! Zatrzymać ich!"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:1183
-#, fuzzy
 msgid ""
 "Yon doors are big, tightly locked — and, I would imagine, well barricaded. "
 "This may take a while."
@@ -2357,7 +2326,6 @@ msgstr ""
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:107
-#, fuzzy
 msgid ""
 "Loremaster... None of us is fit to take up the lordship. Karrag fooled us "
 "all, made us the tools of his foul scheme."
@@ -2411,9 +2379,8 @@ msgstr ""
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:158
-#, fuzzy
 msgid "(<i>Wonderingly</i>) A Lord Companion? And kin of ours..."
-msgstr "[zadumany] Kawaler? I to naszego rodu..."
+msgstr "(<i>Zadumany</i>) Kawaler? I to naszego rodu..."
 
 #. [message]: speaker=Narithil
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/13_Epilogue.cfg:163
@@ -2600,14 +2567,13 @@ msgstr ""
 "krasnoludów."
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
 msgstr ""
 " Obecność tej jednostki inspiruje sąsiadujące przyjazne jednostki do "
-"zadawania większych obrażeń w walce (dotyczy to tylko jednostek tego samego "
-"lub niższego poziomu)."
+"zadawania większych obrażeń w walce (dotyczy tylko jednostek tego samego lub "
+"niższego poziomu)."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:13
@@ -2670,7 +2636,6 @@ msgstr "O nie! Nie możemy zakończyć naszej misji bez wiedzmistrza!"
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/utils/herodeaths.cfg:37
-#, fuzzy
 msgid "Aaarrgh! My students... What will become of them?"
 msgstr "Aaaaaa! Moi uczniowe... co się z nimi stanie?"
 
